新增img：Top-1,2,3。顶部导航栏搜索，调整text-5,6,7.9,10和image11

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <li><a href="#">关于海尔</a></li>
         </ul>
         <div class="nav-icons">
+            <div class="search-container">
+                <input type="text" id="search" name="search"><!--placeholder="Search here..." -->
+              </div>
             <img src="imgs/images/sign0.gif" alt="搜索" class="icon">
             <img src="imgs/images/sign2.gif" alt="搜索" class="icon">
             <img src="imgs/images/sign3.gif" alt="搜索" class="icon">
@@ -105,10 +108,10 @@
     </div>
     <div id="box-5-1"></div>
     <div id="box-6">
-        <h1 class="text-8">品牌咨询</h1>
+        <h1 class="text-8">品牌资讯</h1>
         <div class="consultation">
             <img class="image11" src="imgs/images/image11.gif">
-            <h1 class="text-9">新基建来了，从"场景"到"生态"海尔智家... </h1>
+            <h2 class="text-9">新基建来了，从"场景"到"生态"海尔智家...</h2>
             <p class="text-10">当前，数字经济正席卷全球。数据显示，在2018年，我国数字经济总量就已达到31.3万亿元，占GDP比重达到34.8%.</p>
         </div>
         
