新增 images品牌-1、2、3、4、5、6、7 类=more-4、part-1 part-2 txt-box

--- a/index.html
+++ b/index.html
@@ -109,12 +109,36 @@
     <div id="box-5-1"></div>
     <div id="box-6">
         <h1 class="text-8">品牌资讯</h1>
-        <div class="consultation">
-            <img class="image11" src="imgs/images/image11.gif">
-            <h2 class="text-9">新基建来了，从"场景"到"生态"海尔智家...</h2>
-            <p class="text-10">当前，数字经济正席卷全球。数据显示，在2018年，我国数字经济总量就已达到31.3万亿元，占GDP比重达到34.8%.</p>
+        <div class="Information">
+                <div class="part-1">
+                <img class="image11" src="imgs/images/image11.gif">
+                <h2 class="text-9">新基建来了，从 " 场景 " 到 " 生态 " 海尔智家...</h2>
+                <p class="text-10">当前，数字经济正席卷全球。数据显示，在2018年，我国数字经济总量就已达到31.3万亿元，占GDP比重达到34.8%.</p>
+            </div>
+            <div class="more-4">
+            <a href="#">更多</a>
+            </div>
+            <ul class="part-2">
+                <li>
+                    <div class="txt-box">
+						<h3>服务革命 火箭助力 | 奥克斯空调X中国火</h3>
+						<p>5月31日,奥克斯空调X中国</p>
+					</div>
+                </li>
+                <li>
+                    <div class="txt-box">
+						<h3>奥克斯压缩机项目列入安徽省重大开工</h3>
+						<p>1月2日，2024年安徽省第一批重大项目开工动员。</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="txt-box">
+						<h3>投资50亿元！奥克斯重要项目落户芜湖</h3>
+						<p>11月13日，宁波奥克斯电气股份有限公司与芜</p>
+                    </div>
+                </li>
+            </ul>
         </div>
-        
     </div>
 </body>
 </html>
