class=text-7>title-1 text-8>title-2 新增class Top-1、Top-2、Top-3，title-3，sitemap，box-7， box-8 调整了各种样式！！！！！！！！！！！！ 页面已完成细节待完善

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 <li><img class="pro-1" src="imgs/images/image7.gif" alt="变频多门冰箱"></li>
                 <li><img class="pro-2" src="imgs/images/image8.gif" alt="变频十字对开门冰箱"></li>
                 <li><img class="pro-3" src="imgs/images/image9.gif" alt="变频对开门冰箱"></li>
+                <img class="Top-1" src="imgs/images/Top-1.gif">
+                <img class="Top-2" src="imgs/images/Top-2.gif">
+                <img class="Top-3" src="imgs/images/Top-3.gif">
             </ul>
         </div>
     </div>
@@ -101,15 +104,15 @@
         <div class="text-4">哇哦HTML是最好语言！我最爱HTML了！HTML加CSS简直就像是CPU和GPU的完美搭配！</div>
     </div>
     <div id="box-5">
-        <h1 class="text-7">品牌故事</h1>
+        <h1 class="title-1">品牌故事</h1>
         <p class="text-5">三十多年来，海尔与时俱进，从产品品牌到平台品牌，始终站在时代与行业发展前列，物联网时代</p>
         <p class="text-6">海尔生态品牌将持续为全球用户创造美好生活体验，成为全球生态品牌引领者。</p>
         <img class="banner3" src="imgs/images/banner3.gif">
     </div>
-    <div id="box-5-1"></div>
-    <div id="box-6">
-        <h1 class="text-8">品牌资讯</h1>
-        <div class="Information">
+    <div id="box-5-1"></div>                                                            
+        <div id="box-6">
+            <h1 class="title-2">品牌资讯</h1>
+            <div class="Information">
                 <div class="part-1">
                 <img class="image11" src="imgs/images/image11.gif">
                 <h2 class="text-9">新基建来了，从 " 场景 " 到 " 生态 " 海尔智家...</h2>
@@ -121,23 +124,46 @@
             <ul class="part-2">
                 <li>
                     <div class="txt-box">
-						<h3>服务革命 火箭助力 | 奥克斯空调X中国火</h3>
-						<p>5月31日,奥克斯空调X中国</p>
+						<h3>海尔智家APP升级:“超市”很特别，专卖“生活”</h3>
+						<p>普通超市可以提供给您缺少的食品、日用品...</p>
 					</div>
                 </li>
                 <li>
                     <div class="txt-box">
-						<h3>奥克斯压缩机项目列入安徽省重大开工</h3>
-						<p>1月2日，2024年安徽省第一批重大项目开工动员。</p>
+						<h3>店在线上，厂在线下!不，工厂也在线上!</h3>
+						<p>般来说，购买热水器可以在线上商店下单，...</p>
                     </div>
                 </li>
                 <li>
                     <div class="txt-box">
-						<h3>投资50亿元！奥克斯重要项目落户芜湖</h3>
+						<h3>外国人在中国如何防疫?用海尔智慧家电7步搞定消杀工作</h3>
 						<p>11月13日，宁波奥克斯电气股份有限公司与芜</p>
                     </div>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div id="box-7">
+        <h1 class="title-3">品牌链接</h1>
+            <ul class="barnd">
+                <li><img src="imgs/images/brand-1.gif"></li>
+                <li><img src="imgs/images/brand-2.gif"></li>
+                <li><img src="imgs/images/brand-3.gif"></li>
+                <li><img src="imgs/images/brand-4.gif"></li>
+                <li><img src="imgs/images/brand-5.gif"></li>
+                <li><img src="imgs/images/brand-6.gif"></li>
+                <li><img src="imgs/images/brand-7.gif"></li>
+            </ul>
+    </div>
+    <div id="box-8">
+        <div class="sitemap">	
+            <dl><dt>智慧家庭</dt> <a href="#">智慧首页</a> <a href="#">智家方案</a> <a href="#">智慧家电</a> <a href="#">生活资讯</a> <a href="#">智慧体验店</a></dl>
+            <dl><dt>个人与家用产品</dt> <a href="#">文字内容2</a> <a href="#">文字内容2</a> <a href="#">文字内容2</a> <a href="#">文字内容2</a> <a href="#">小家电</a> <a href="#">文字内容2</a> <a href="#">文字内容2</a></dl>
+            <dl><dt>商业解决方案</dt> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a></dl>
+            <dl><dt>购买与服务</dt> <a href="#">文字内容1</a> <a href="#">文字内容1</a> <a href="#">文字内容1</a> <a href="#">文字内容1</a> <a href="#">文字内容1</a> <a href="#">文字内容1</a></dl>
+            <dl><dt>关于海尔</dt> <a href="#">文字内容2</a> <a href="#">文字内容2</a> <a href="#">文字内容2</a> </dl>
+            <dl><dt>友情链接</dt> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a> </dl>
+            <dl><dt>友情链接</dt> <a href="#">文字内容3</a> <a href="#">文字内容3</a> <a href="#">文字内容3</a> </dl>
         </div>
     </div>
 </body>
