调整部分flex样式解决部分浏览器css效果失效问题

--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
             <div class="search-container">
                 <input type="text" id="search" name="search"><!--placeholder="Search here..." -->
               </div>
-            <img src="imgs/images/sign0.gif" alt="搜索" class="icon">
             <img src="imgs/images/sign2.gif" alt="搜索" class="icon">
             <img src="imgs/images/sign3.gif" alt="搜索" class="icon">
+            <img src="imgs/images/sign0.gif" alt="搜索" class="icon">
+
         </div>
         <!-- 海报部分 -->
     </div>
@@ -95,9 +96,7 @@
         </div>
     </div>
     <div id="box-4">
-        <div class="story">
-            <img src="imgs/images/image10.gif" alt="人气嗨购 精彩享不停">
-        </div>
+        <img class="image10" src="imgs/images/image10.gif" alt="人气嗨购 精彩享不停">
         <div class="text-1">活动集结地</div>
         <div class="text-2">哇哦HTML是最好语言！我最爱HTML了！HTML加CSS简直就像是CPU和GPU的完美搭配！</div>
         <div class="text-3">全屋购</div>
